@@ -900,6 +900,7 @@ DISSECTOR_SRC = \
 	packet-memcache.c	\
 	packet-mesh.c		\
 	packet-meta.c		\
+	packet-metamako.c	\
 	packet-mgcp.c		\
 	packet-mih.c		\
 	packet-mikey.c		\
